<resources>
    <string name="app_name">Sundarua</string>
    <string name="latihan_kuis">Latihan Kuis</string>
    <string name="belajar_kata">Undak Usuk Basa Sunda</string>
    <string name="home_slug">Sundarua, Ti Sakola Pikeun Keur Urang Sunda!</string>
    <string name="motivation">Diajar unggal poe, jadi budak nu pinuh élmu!</string>
    <string name="aksara_sunda">Kamus Sunda</string>
    <string name="word_header">Diajar Kecap</string>
    <string name="kuis">Kuis</string>
    <string name="soal">Pananyaan</string>
    <string name="quiz_slug">Jawab pertanyaana, kanggo ngumpulkeun poinna!</string>
    <string name="salajengna">Salajengna</string>
    <string name="tulis_nama">Tulis nami anjeun di dieu</string>
    <string name="press_button">Pencet tombol ieu upami atos rengse</string>
    <string name="next">Lajengkeun</string>
    <string name="finish">Rengse</string>
    <string name="sorangan">Lemes ka sorangan:</string>
    <string name="batur">Lemes ka batur:</string>
    <string name="loma">Basa loma:</string>
    <string name="b_indonesia">Indonesia:</string>
    <string name="inggris">Inggris:</string>
    <string name="nami_panggilan">Nami Panggilan:</string>
    <string name="sundarua_app">Sundarua App</string>
    <string name="versi_1_0">versi 1.0</string>
    <string name="hadiah">Hadiah</string>
    <string name="tukerkeun_hadiah">Tukerkeun hadiah</string>
    <string name="alert_hadiah">Pencet tombol ieu kanggo nuker hadiah</string>
    <string name="buku_200_coin">Buku 200 Coin</string>
    <string name="pensil_100_coin">Pensil 100 Coin</string>
    <string name="riwayat_abdi">Riwayat Abdi:</string>
    <string name="bereskeun_pananyaan_dihandap_ieu">Bereskeun pananyaan dihandap ieu</string>
    <string name="kosakata">Kosakata</string>
    <string name="avatar_description">Avatar Description</string>
    <string name="sasatoan">Sasatoan</string>
    <string name="angka">Angka</string>
    <string name="rarangken">Rarangken</string>
    <string name="aksara_swara">Aksara Swara</string>
    <string name="aksara_ngalagena">Aksara Ngalagena</string>
    <string name="description">Description</string>
    <string name="koin">Koin</string>
    <string name="salira">Salira</string>
    <string name="barang">Barang</string>

    <string name="screen1">Selamat Datang</string>
    <string name="screen2">LMS UMMI</string>
    <string name="screen3">UMMI Sukabumi</string>
    <string name="screen1desc">Learning Management System (LMS) adalah platform digital yang memfasilitasi proses pembelajaran secara online.</string>
    <string name="screen2desc">Learning Management System (LMS) UMMI mendukung pendidikan daring yang interaktif, efektif, dan efisien untuk semua.</string>
    <string name="screen3desc">Universitas Muhammadiyah Sukabumi (UMMI) adalah perguruan tinggi yang mengedepankan pendidikan berkualitas dan berintegritas tinggi.</string>
    <string name="startDesc">Create a long video or shorts and upload on youtube. Interact with your subscribers on youtube live.</string>
</resources>