<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/small_top_bg"
    android:padding="16dp"
    tools:context=".activity.RewardActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/back_main_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_arrow_back_white_24"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/whiteMediumText"
            android:id="@+id/quizText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hadiah"
            android:textSize="@dimen/text_sl"
            android:layout_gravity="center" />
    </FrameLayout>

    <!-- Teks Soal -->
    <TextView
        style="@style/blackMediumText"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tukerkeun_hadiah"
        android:textSize="@dimen/text_m"
        android:layout_marginTop="70dp" />

    <TextView
        style="@style/blackRegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_sm"
        android:textStyle="italic"
        android:text="@string/alert_hadiah" />

    <Button
        android:id="@+id/getBookBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        style="@style/redButton"
        android:text="@string/buku_200_coin" />

        <Button
            android:id="@+id/getPencilBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            style="@style/redButton"
            android:text="@string/pensil_100_coin" />

        <TextView
            style="@style/blackMediumText"
            android:id="@+id/claimTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/riwayat_abdi"
            android:textSize="@dimen/text_m"
            android:layout_marginTop="38dp" />

        <LinearLayout
            style="@style/blackRegularText"
            android:id="@+id/claimHistoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

</LinearLayout>