<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/redbottombg"
    tools:context=".activity.IdentityActivity">

    <!-- Versi Aplikasi -->
    <TextView
        style="@style/blackRegularText"
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:textSize="@dimen/text_sm"
        android:text="@string/versi_1_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Judul App -->
    <TextView
        style="@style/redBoldText"
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sundarua_app"
        android:textSize="@dimen/text_xl"
        app:layout_constraintTop_toBottomOf="@id/version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_24" />

    <!-- Avatar Image -->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/burungunta" />

    <!-- Nickname Label -->
    <TextView
        android:id="@+id/nickname"
        style="@style/whiteMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/nami_panggilan"
        android:textSize="@dimen/text_sm"
        app:layout_constraintBottom_toTopOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText" />

    <!-- EditText untuk Nama -->
    <EditText
        android:id="@+id/nameEditText"
        style="@style/CustomBoldEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="32dp"
        android:autofillHints="username"
        android:hint="@string/tulis_nama"
        android:inputType="textCapWords"
        android:padding="@dimen/padding_edittext"
        app:layout_constraintBottom_toTopOf="@id/saveNameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Button Save -->
    <Button
        android:id="@+id/saveNameButton"
        style="@style/whiteButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="48dp"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>