<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.QuizActivity">

    <ImageView
        android:id="@+id/back_main_btn"
        android:layout_marginTop="30dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/main_red"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kuis"
            android:gravity="center"
            android:textSize="34sp"
            android:letterSpacing="0.1"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_slug"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soal"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progress_bar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/recycler_view"/>

    </RelativeLayout>


</LinearLayout>